# asmkit

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PORTING.md  README.md  build.rs  classifier.rs  emitter.rs  inst.rs  inst_impl.rs  opcodes.rs  priv  pub
.forgejo/workflows/: ci.yml
benches/: x86.rs
examples/: a64.rs  factorial.rs  patch.rs  reloc.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: buffer_lifecycle.rs  raw_emission.rs
meta/: README.md  a64_rows.json  arm.py  arm64.py  arm64.txt  armdesc.txt  armfeat.txt  asmjit2rust.py  constants.py  docenizer_amd64.py  docenizer_arm64.py  docenizer_riscv.py  fadec.py  parse.py  parsearm.py  ppc.py  ppc.txt  regen.sh  riscv.py  rustbuilder.py  x86.py  x86.txt  x86_emitter.txt  x86_emitter_gen.py  x86_rows.json  x86_v2.py
meta/asmjit_db/: README.md  __init__.py  base.py  cxx_src.py  exp.py  gen_common.py  tablegen.py  tablegen_a64.py  tablegen_x86.py  test_all.py  test_instdb.py  test_tablegen.py
meta/asmjit_db/templates/: a64_head.txt  a64_mid.txt  a64_table_new.txt  x86_structs.txt  x86_structs_2.txt
meta/difftest/: FORMAT.md  corpus_dump.rs  corpus_gen.rs  extract_recipes.py  materialize.sh
meta/golden/: smoke.cpp
old/assembler/: binemit.rs  codeholder.rs  mod.rs  operands.rs
old/assembler/riscv/: assembler.rs  mod.rs
old/assembler/x86/: mod.rs
old/encdec/riscv/: decode.rs  formatter.rs  inst.rs  mod.rs
old/encdec/x86/: formatter.rs  mod.rs  v2.rs
src/: lib.rs  main.rs
src/aarch64/: arch_traits.rs  assembler.rs  classifier.rs  decoder.rs  emit.rs  emitter.rs  encoder.rs  encoder_tables.rs  instapi.rs  instdb.rs  mod.rs  opcodes.rs  operands.rs  rwflags.rs
src/assembler/: assembler.rs  binemit.rs  codeholder.rs  mod.rs
src/assembler/riscv/: assembler.rs  impl.rs  mod.rs
src/assembler/x86/: assembler.rs  operands.rs
src/core/: arch_traits.rs  buffer.rs  builder.rs  emitter.rs  formatter.rs  globals.rs  inst.rs  jit_allocator.rs  linker.rs  mod.rs  operand.rs  patch.rs  rwinfo.rs  section.rs  support.rs  target.rs  types.rs
src/encdec/: mod.rs
src/encdec/riscv/: fields.rs  formatter.rs  mod.rs
src/encdec/x86/: decode.rs  decode_tab.rs  v1.rs
src/masm/: mod.rs  x86.rs
src/ppc/: opc.c
src/riscv/: arch_traits.rs  assembler.rs  decode.rs  emitter.rs  formatter.rs  instapi.rs  instdb.rs  mod.rs  opcodes.rs  operands.rs
src/ujit/: ir.rs  mod.rs
src/util/: mod.rs  os.rs  virtual_memory.rs
src/x86/: arch_traits.rs  assembler.rs  dbg_probe.rs  decode.rs  decode_tab.rs  emit.rs  emitter.rs  encoder.rs  encoder_tables.rs  formatter.rs  instapi.rs  instdb.rs  macroassembler.rs  mod.rs  opcode.rs  opcodes.rs  operands.rs
src/x86/features/: 387.rs  3DNOW.rs  486.rs  586.rs  686.rs  ADX.rs  AESKLE.rs  AESNI.rs  AVX.rs  AVX2.rs  AVX512BF16.rs  AVX512BITALG.rs  AVX512BW.rs  AVX512CD.rs  AVX512DQ.rs  AVX512F.rs  AVX512IFMA.rs  AVX512VBMI.rs  AVX512VBMI2.rs  AVX512VNNI.rs  AVX512VP2INTERSECT.rs  AVX512VPOPCNTDQ.rs  AVX512_BF16.rs  AVX512_BITALG.rs  AVX512_IFMA.rs  AVX512_VBMI.rs  AVX512_VBMI2.rs  AVX512_VNNI.rs  AVX512_VP2INTERSECT.rs  AVX512_VPOPCNTDQ.rs  BASE.rs  BMI1.rs  BMI2.rs  Base.rs  CET.rs  CLDEMOTE.rs  CLFLUSHOPT.rs  CLWB.rs  CLZERO.rs  CMOV.rs  (+70 more)
tests/: aarch64_selfcheck.rs  aarch64_vectors.rs  abi_execution.rs  arch_traits_sanity.rs  independent_oracles.rs  properties.rs  riscv_coverage.rs  x86_coverage.rs  x86_differential.rs
tests/x86dif/: mnem_map.rs
