[package]
name = "asmkit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Portable assembler toolkit: decoding and encoding of various architectures"
repository = "https://github.com/playx18/asmkit"
keywords = ["assembler", "asm", "jit", "riscv", "x86"]

[dependencies]
smallvec = "1.13"
libc = { version = "0.2.162", optional = true }
cfgenius = "0.1"
intrusive-collections = "0.9"
errno = { version = "0.3.9", optional = true }
paste = "1.0"
num-traits = "0.2.19"
derive_more = { version = "1.0.0", features = [
    "deref",
    "deref_mut",
    "try_from",
    "add",
] }


[target.'cfg(target_arch="riscv64")'.dependencies]
wasmtime-jit-icache-coherence = { version = "26.0.1", optional = true }
[features]
default = ["jit", "riscv", "x86"]
x86 = []
riscv = []
jit = ["wasmtime-jit-icache-coherence", "libc", "errno"]


[profile.release]
panic = "abort"
