[package]
name = "asmkit-rs"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Portable assembler toolkit for encoding x86/x64, AArch64, and RISC-V"
repository = "https://codeberg.org/playXE/asmkit"
keywords = ["assembler", "asm", "jit", "riscv", "x86"]

[lib]
name = "asmkit"

[dependencies]
smallvec = "1.13"
libc = { version = "0.2.162", optional = true, default-features = false }
cfgenius = "0.1"
intrusive-collections = "0.9"
errno = { version = "0.3.9", optional = true, default-features = false }
paste = "1.0"
num-traits = { version = "0.2.19", default-features = false }
bitflags = "2.11.0"

[target.'cfg(target_arch="riscv64")'.dependencies]
wasmtime-jit-icache-coherence = { version = "26.0.1", optional = true }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
	"Win32_Foundation",
	"Win32_System_SystemInformation",
	"Win32_System_Memory",
	"Win32_Security",
]

[features]
default = ["x86", "riscv", "aarch64"]
x86 = []
riscv = []
aarch64 = []
jit = ["wasmtime-jit-icache-coherence", "libc", "errno"]
# Exposes instruction-database metadata used by the exhaustive validation suites.
validation = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
iced-x86 = { version = "1.21", features = ["code_asm"] }
capstone = "0.14.0"

[[bench]]
name = "x86"
harness = false

[[example]]
name = "a64"
required-features = ["aarch64"]

[[example]]
name = "factorial"
required-features = ["x86", "riscv", "aarch64", "jit"]

[[example]]
name = "reloc"
required-features = ["x86", "riscv", "aarch64", "jit"]


[profile.release]
panic = "abort"
